--- a/src/main/resources/templates/student/all-courses.html
+++ b/src/main/resources/templates/student/all-courses.html
@@ -7,21 +7,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: lightgreen">
 <div th:insert="fragments/navbar-for-student::nav"></div>
-<div class="container" style="margin-top:100px">
+<h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt; margin-top: 20px">Courses</h2>
+<div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
   <div class="row" align="center" text-align="center">
     <th:block th:each="course : ${courses}">
       <div class="col-4">
         <div class="course" style="width: 100%; margin-bottom: 25px;">
           <div class="course-body">
-            <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
+            <h5 class="course-title custom-center" th:text="${course.title}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 30pt; margin-bottom: 15px">Course title</h5>
             <a th:href="@{/student/courses/details/__${course.id}__}">
               <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
             </a>
             <div align="center">
               <form th:action="@{/student/courses/sign-up-for-course/__${course.id}__}" class="responsive">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Sign up</button>
+                <button type="submit" class="btn btn-primary" style="margin-top: 15px; width: 40%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Sign up</button>
               </form>
             </div>
           </div>
