--- a/src/main/resources/templates/student/block-details.html
+++ b/src/main/resources/templates/student/block-details.html
@@ -3,59 +3,43 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Block details for user</title>
+  <title>Block details for student</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-<div class="container" style="margin-top:100px;">
-  <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Block</div>
-  <table class="table table-striped" align="center" style="text-align: center; width:50%">
-    <thead>
-    <tr style="background-color: palegreen; width: 100%; height: 30px">
-      <th>Id</th>
-      <th>Block title</th>
-      <th>Course title</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td th:text="${block.id}"></td>
-      <td th:text="${block.blockTitle}"></td>
-      <td th:text="${block.courseTitle}"></td>
-    </tr>
-    </tbody>
-  </table>
+<body style="background-color: lightgreen">
+<div th:insert="fragments/navbar-for-student::nav"></div>
+<div class="container" align="center" style="margin-top:30px; background-color: palegreen; width: 50%">
+  <div class="row" align="center" text-align="center">
+    <div class="block" style="width: 100%; margin-bottom: 25px;">
+      <div th:object="${block}" class="block-body">
+        <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Block title</h5>
+        <a>
+          <img th:src="@{/uploads/block.png}" class="responsive" />
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-  <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes in the block</div>
-  <table align="center" style="text-align: center; width:80%">
-    <thead>
-    <tr style="background-color: palegreen; width: 100%; height: 30px">
-      <th>Id</th>
-      <th>Topic</th>
-      <th>Date</th>
-      <th>Time</th>
-      <th>Block title</th>
-      <th>Course title</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="class : ${classesInBlock}">
-      <td th:text="${class.id}"></td>
-      <td th:text="${class.topic}"></td>
-      <td th:text="${class.date}"></td>
-      <td th:text="${class.time}"></td>
-      <td th:text="${class.blockTitle}"></td>
-      <td th:text="${class.courseTitle}"></td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-<br/>
-<div align="center">
-  <form th:action="@{/student}">
-    <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-  </form>
+<div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
+  <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt">Classes</h2>
+  <div class="row" align="center" text-align="center">
+    <th:block th:each="class : ${classesInBlock}">
+      <div class="col-4">
+        <div class="class" style="width: 100%; margin-bottom: 25px;">
+          <div class="class-body" style="margin-bottom: 100px">
+            <h5 class="class-course-title custom-center" th:text="${class.courseTitle}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 30pt">Course title</h5>
+            <h5 class="class-block-title custom-center" th:text="${class.blockTitle}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 25pt">Block title</h5>
+            <a>
+              <img th:src="@{/uploads/classes.png}" class="responsive" />
+            </a>
+            <h5 class="class-topic custom-center" th:text="${class.topic}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 25pt">Class topic</h5>
+            <h5 class="class-date custom-center" th:text="${class.date}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 15pt">Class date</h5>
+            <h5 class="class-time custom-center" th:text="${class.time}" style="margin-top: 20px; background-color: darkgreen; color: palegreen; font-family: Brush Script MT; font-size: 15pt">Class time</h5>
+          </div>
+        </div>
+      </div>
+    </th:block>
+  </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
