--- a/src/main/resources/templates/student/course-details.html
+++ b/src/main/resources/templates/student/course-details.html
@@ -3,49 +3,41 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Course details for user</title>
+  <title>Course details for student</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-<div class="container" style="margin-top:100px;">
-  <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Course</div>
-  <table class="table table-striped" align="center" style="text-align: center; width:50%">
-    <thead>
-    <tr style="background-color: palegreen; width: 100%; height: 30px">
-      <th>Id</th>
-      <th>Title</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td th:text="${courseById.id}"></td>
-      <td th:text="${courseById.title}"></td>
-    </tr>
-    </tbody>
-  </table>
+<body style="background-color: lightgreen">
+<div th:insert="fragments/navbar-for-student::nav"></div>
+<div class="container" align="center" style="margin-top:30px; background-color: palegreen; width: 50%">
+  <div class="row" align="center" text-align="center">
+    <div class="course" style="width: 100%; margin-bottom: 25px;">
+      <div th:object="${courseById}" class="course-body">
+        <h5 class="course-title custom-center" th:text="${courseById.title}" style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Course title</h5>
+        <a>
+          <img th:src="@{/uploads/__${courseById.imageName}__}" th:alt="${courseById.imageName}" class="responsive" />
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks in the course</div>
-<div class="container" style="margin-top:100px">
+<div class="container" align="center" style="margin-top:30px; margin-bottom: 30px; background-color: palegreen">
+  <div style="background-color: palegreen; margin-top: 30px">
+    <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Blocks</h2>
+  </div>
   <div class="row" align="center" text-align="center">
     <th:block th:each="block : ${blocksInCourse}">
       <div class="col-4">
-        <div class="block" style="width: 100%; margin-bottom: 25px;">
+        <div class="block" style="width: 100%; margin-bottom: 20px;">
           <div class="block-body">
-            <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="background-color: paleturquoise">Block title</h5>
+            <h5 class="block-title custom-center" th:text="${block.blockTitle}" style="text-align: center; color: palegreen; font-family: Brush Script MT; font-size: 30pt; background-color: darkgreen;">Block title</h5>
             <a th:href="@{/student/blocks/details/__${block.id}__}">
-              <img th:src="@{/uploads/blocks.png}" class="responsive" />
+              <img th:src="@{/uploads/block.png}" class="responsive" />
             </a>
           </div>
         </div>
       </div>
     </th:block>
   </div>
-</div>
-<br/>
-<div align="center">
-  <form th:action="@{/student}">
-    <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
-  </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
