--- a/src/main/resources/templates/student/sign-up-for-course.html
+++ b/src/main/resources/templates/student/sign-up-for-course.html
@@ -6,12 +6,13 @@
   <title>Sign up for course</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-<div class="container" align="center" style="margin-top:100px">
+<body style="background-color: lightgreen">
+<div th:insert="fragments/navbar-for-student::nav"></div>
+<div class="container" align="center" style="margin-top:30px; background-color: palegreen; width: 50%">
   <div class="row" align="center" text-align="center">
     <div class="course" style="width: 100%; margin-bottom: 25px;">
       <div th:object="${course}" class="course-body">
-        <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
+        <h5 class="course-title custom-center" th:text="${course.title}" style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt;">Course title</h5>
         <a th:href="@{/student/courses/details/__${course.id}__}">
           <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
         </a>
@@ -19,31 +20,26 @@
     </div>
   </div>
 </div>
-<br/>
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Type you data</div>
-<div class="container" style="margin-top:100px;">
+<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
+  <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Type you data</h2>
+</div>
+<div class="container" style="margin-top:15px;">
   <div class="row">
     <form th:action="@{/student/courses/sign-up-for-course}" th:object="${newRegistration}" method="post">
       <div class="mb-3">
-        <label for="user-name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="user-name" th:field="*{userName}">
+        <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-name" class="form-label">Name</label>
+        <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-name" th:field="*{userName}">
       </div>
       <div class="mb-3">
-        <label for="user-surname" class="form-label">Surname</label>
-        <input type="text" class="form-control" id="user-surname" th:field="*{userSurname}">
+        <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-surname" class="form-label">Surname</label>
+        <input style="background-color: darkgreen; color: palegreen" type="text" class="form-control" id="user-surname" th:field="*{userSurname}">
       </div>
       <div align="center">
         <input type="hidden" name="courseId" th:value="${courseId}" class="form-control" id="course-id">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Sign up</button>
+        <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Sign up</button>
       </div>
     </form>
   </div>
-</div>
-<br/>
-<div align="center">
-  <form th:action="@{/student}">
-    <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
-  </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
