--- a/src/main/resources/templates/type-all-data.html
+++ b/src/main/resources/templates/type-all-data.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Illegal argument</title>
+  <title>Type all data</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body style="background-color: lightgreen">
@@ -14,7 +14,7 @@
   <h2 style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 50pt;">Incorrect data has been entered.</h2>
   <br/>
   <br/>
-  <h2 th:text="${message}" style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 50pt;">Message</h2>
+  <h2 style="background-color: palegreen; color: darkgreen; font-family: Brush Script MT; font-size: 50pt;">You have to type all data!</h2>
   <br/>
   <br/>
   <br/>
