--- a/src/main/resources/templates/admin/courses/delete-course.html
+++ b/src/main/resources/templates/admin/courses/delete-course.html
@@ -13,34 +13,24 @@
     <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Title</th>
+            <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="course : ${courses}">
-            <td th:text="${course.id}"></td>
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="course, courseToDelete : ${courses}">
             <td th:text="${course.title}"></td>
+            <td>
+                <form th:action="@{/main-page/courses/delete}" method="post">
+                <div align="center">
+                    <input type="hidden" th:name="idToDelete" th:value="${course.id}" />
+                    <button style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
+                </div>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Delete course</h2>
-    <h3 style="text-align: center; font-size: 30pt; color: darkgreen">Deleting the chosen course will also delete all blocks and classes assigned to that course, all notifications assigned to the classes and all registrations assigned to the chosen course.</h3>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/courses/delete}" th:object="${courseToDelete}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="course-id" class="form-label">Course id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
-            </div>
-            <div align="center">
-                <button style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
