--- a/src/main/resources/templates/admin/blocks/delete-block.html
+++ b/src/main/resources/templates/admin/blocks/delete-block.html
@@ -10,39 +10,30 @@
 <div th:insert="fragments/navbar-for-admin::nav"></div>
 <div class="container" style="background-color: palegreen; padding: 50px; border-radius:20px; margin-top: 10px">
     <h2 style="text-align: center; font-size: 60pt; font-family: Brush Script MT; color: darkgreen">Blocks</h2>
-    <table class="table table-striped" align="center" style="text-align: center; width:50%; background-color: palegreen; border-color: darkgreen;">
+    <h3 style="text-align: center; font-size: 30pt; color: darkgreen; font-family: Brush Script MT">Deleting the chosen block will also delete all classes assigned to that block and all notifications assigned to the classes.</h3>
+    <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Block title</th>
             <th>Course title</th>
+            <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="block : ${blocks}">
-            <td th:text="${block.id}"></td>
+        <tr style="background-color: palegreen; width: 100%; color: darkgreen;" th:each="block, blockToDelete : ${blocks}">
             <td th:text="${block.blockTitle}"></td>
             <td th:text="${block.courseTitle}"></td>
+            <td>
+                <form th:action="@{/main-page/blocks/delete}" method="post">
+                    <div align="center">
+                        <input type="hidden" th:name="idToDelete" th:value="${block.id}" />
+                        <button style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
+                    </div>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Delete block</h2>
-    <h3 style="text-align: center; font-size: 30pt; color: darkgreen">Deleting the chosen block will also delete all classes assigned to that block and all notifications assigned to the classes.</h3>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/blocks/delete}" th:object="${blockToDelete}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="block-id" class="form-label">Block id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING block" class="form-control" id="block-id" th:field="*{id}">
-            </div>
-            <div align="center">
-                <button style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
