--- a/src/main/resources/templates/admin/registrations/delete-registration.html
+++ b/src/main/resources/templates/admin/registrations/delete-registration.html
@@ -13,41 +13,32 @@
     <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Date</th>
             <th>Time</th>
             <th>User name</th>
             <th>User surname</th>
             <th>Course title</th>
+            <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="registration : ${registrations}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${registration.id}"></td>
+        <tr th:each="registration, registrationToDelete : ${registrations}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${registration.date}"></td>
             <td th:text="${registration.time}"></td>
             <td th:text="${registration.userName}"></td>
             <td th:text="${registration.userSurname}"></td>
             <td th:text="${registration.courseTitle}"></td>
+            <td>
+                <form th:action="@{/main-page/registrations/delete}" method="post">
+                    <div align="center">
+                        <input type="hidden" th:name="idToDelete" th:value="${registration.id}" />
+                        <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
+                    </div>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Delete registration</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/registrations/delete}" th:object="${registrationToDelete}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="registration-id" class="form-label">Registration id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING registration" class="form-control" id="registration-id" th:field="*{id}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Delete</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
