--- a/src/main/resources/templates/admin/users/delete-user.html
+++ b/src/main/resources/templates/admin/users/delete-user.html
@@ -13,43 +13,34 @@
     <table class="table table-striped" align="center" style="text-align: center; width:100%; background-color: palegreen; border-color: darkgreen;">
         <thead style="margin-top: 10px">
         <tr style="background-color: palegreen; width: 100%; color: darkgreen; font-family: Brush Script MT; font-size: 40pt">
-            <th>Id</th>
             <th>Login</th>
             <th>Password</th>
             <th>Role</th>
             <th>Name</th>
             <th>Surname</th>
             <th>Active</th>
+            <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
-            <td th:text="${user.id}"></td>
+        <tr th:each="user, userToDelete : ${users}" style="background-color: palegreen; width: 100%; color: darkgreen;">
             <td th:text="${user.login}"></td>
             <td th:text="${user.password}"></td>
             <td th:text="${user.userRole}"></td>
             <td th:text="${user.name}"></td>
             <td th:text="${user.surname}"></td>
             <td th:text="${user.activeUser}"></td>
+            <td>
+                <form th:action="@{/main-page/users/delete}" method="post">
+                    <div align="center">
+                        <input type="hidden" th:name="idToDelete" th:value="${user.id}" />
+                        <button style="width: 70%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen" type="submit" class="btn btn-primary">Delete</button>
+                    </div>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
-</div>
-<div class="container" style="background-color: palegreen; border-color: darkgreen; font-family: Brush Script MT; margin-top:10px">
-    <h2 style="text-align: center; font-size: 60pt; color: darkgreen">Delete user</h2>
-</div>
-<div class="container" style="background-color: palegreen; margin-top:10px; margin-bottom: 30px">
-    <div class="row">
-        <form th:action="@{/main-page/users/delete}" th:object="${userToDelete}" method="post">
-            <div class="mb-3">
-                <label style="color: darkgreen; font-family: Brush Script MT; font-size: 30pt" for="user-id" class="form-label">User id</label>
-                <input style="background-color: darkgreen; color: palegreen" type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{id}">
-            </div>
-            <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 30%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Delete</button>
-            </div>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
