--- a/src/main/resources/templates/student/all-courses.html
+++ b/src/main/resources/templates/student/all-courses.html
@@ -12,7 +12,7 @@
 <h2 style="text-align: center; color: darkgreen; font-family: Brush Script MT; font-size: 60pt; margin-top: 20px">Courses</h2>
 <div class="container" style="margin-top:20px; background-color: palegreen; margin-bottom: 100px">
   <div class="row" align="center" text-align="center">
-    <th:block th:each="course : ${courses}">
+    <th:block th:each="course, courseToSignUp : ${courses}">
       <div class="col-4">
         <div class="course" style="width: 100%; margin-bottom: 25px;">
           <div class="course-body">
@@ -21,7 +21,8 @@
               <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
             </a>
             <div align="center">
-              <form th:action="@{/student/courses/sign-up-for-course/__${course.id}__}" class="responsive">
+              <form th:action="@{/student/courses/sign-up-for-course}" method="post">
+                <input type="hidden" th:name="courseId" th:value="${course.id}" />
                 <button type="submit" class="btn btn-primary" style="margin-top: 15px; width: 40%; margin-bottom: 15px; background-color: darkgreen; border-color: darkgreen; color: palegreen">Sign up</button>
               </form>
             </div>
